# practice-25-26

./: README.md
LSSParallel/: CMakeLists.txt  main.cpp
LSSParallel/input/: input.h
LSSParallel/print/: CMakeLists.txt  print.cpp  print.h
LSSParallel/solution/: CMakeLists.txt  solution.cpp  solution.h
LSSolution/: CMakeLists.txt  main.cpp
LSSolution/input/: CMakeLists.txt  input.cpp
LSSolution/print/: CMakeLists.txt  print.cpp  print.h
LSSolution/solution/: CMakeLists.txt  solution.cpp  solution.h
